GUI Modes Framework Complete

--- a/DesktopJavaFramework/nbproject/private/private.properties
+++ b/DesktopJavaFramework/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-io-2.5.jar=/Users/Ryan/Desktop/RyanCourseSiteGenerator/commons-io-2.5-bin/commons-io-2.5/commons-io-2.5.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/Users/Ryan/Library/Application Support/NetBeans/8.2/build.properties
