--- a/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
@@ -1,3 +1,6 @@
+app_title=Ryan Burgert's Course Site Generator
+app_icon_name=AppIcon.png
+#region Eclipse-generated properties
 prop122=-fx-background-color: \#336688; -fx-background-radius: 0;
 prop136=-fx-background-color: \#336688; -fx-background-radius: 0;
 prop177=-fx-background-color: \#336688; -fx-background-radius: 0;
@@ -293,3 +296,4 @@ prop254=nnnnnn
 prop281=teme
 prop214=timeywimey
 prop212=topicshmopic
+#endregion
