--- a/RyansAppFramework/nbproject/project.properties
+++ b/RyansAppFramework/nbproject/project.properties
@@ -66,7 +66,7 @@ javafx.classpath.extension=\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
 javafx.deploy.allowoffline=true
-# If true, application update mode is set to 'background', if false, update mode is set to 'eager'
+# If true, application updateTANameEmail mode is set to 'background', if false, updateTANameEmail mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
