--- a/RyansAppFramework/build.xml
+++ b/RyansAppFramework/build.xml
@@ -5,7 +5,7 @@
 
     There exist several targets which are by default empty and which can be 
     used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. Those of them relevant for JavaFX project are: 
+    before and after some _Experiments_.main targets. Those of them relevant for JavaFX project are:
 
       -pre-init:                 called before initialization of project properties
       -post-init:                called after initialization of project properties
