--- a/RyansAppFramework/nbproject/project.properties
+++ b/RyansAppFramework/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=_Experiments_.RyansAppFramework
+javafx._Experiments_.main.class=_Experiments_.RyansAppFramework
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -93,7 +93,7 @@ javafx.run.width=800
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=com.javafx.main.Main
+_Experiments_.main.class=com.javafx.main.Main
 # For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
 manifest.custom.codebase=*
 # Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
