--- a/TAManager_Solution/nbproject/project.properties
+++ b/TAManager_Solution/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tam.TAManagerApp
+_Experiments_.main.class=tam.TAManagerApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
