--- a/jTPS/nbproject/project.properties
+++ b/jTPS/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jtps.test.jTPS_Tester
+_Experiments_.main.class=jtps.test.jTPS_Tester
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
