starting to get a bit sloppy...if its confusing just revert to me. Im in a rush to get it in before midnight tomorrow, but if I do something stupid just start from scratch over here. I dont want crap code in my project.

--- a/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
@@ -334,6 +334,7 @@ prop47=http://www3.cs.stonybrook.edu/~cse219/Section02/index.html
 prop57=ioiioh
 prop252=lllllll
 prop190=mondaywunday
+prop666=jibblemonster
 prop254=nnnnnn
 prop281=teme
 prop214=timeywimey
