removed most hash numbers from GUI

--- a/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
@@ -168,12 +168,12 @@ prop110=Add/Edit
 prop204=Add/Edit
 prop249=Add/Edit
 prop277=Add/Edit
-prop151=Add/Edit67
-prop257=Add/Update0
-prop219=Add/Update0987
-prop288=Add/Update23
-prop166=Add/Update564
-prop118=Add/Update989
+prop151=Add/Edit
+prop257=Add/Update
+prop219=Add/Update
+prop288=Add/Update
+prop166=Add/Update
+prop118=Add/Update
 prop102=Arial-Except no i want this to break. When this was just plain "Arial", weird things happened when I clicked from pane to pane (the gui kept resizing)
 prop111=Arial-Except no i want this to break. When this was just plain "Arial", weird things happened when I clicked from pane to pane (the gui kept resizing)
 prop126=Arial-Except no i want this to break. When this was just plain "Arial", weird things happened when I clicked from pane to pane (the gui kept resizing)
@@ -194,22 +194,22 @@ prop79=Banner School Image:
 prop22=Bookcopy.png
 prop49=CSE
 prop184=Calendar Boundaries
-prop59=Change0
-prop66=Change1
-prop81=Change2
-prop88=Change3
-prop90=Change4
-prop221=Clear0909
-prop290=Clear2345
+prop59=Change
+prop66=Change
+prop81=Change
+prop88=Change
+prop90=Change
+prop221=Clear
+prop290=Clear
 prop120=Clear
-prop168=Clear56
-prop259=Clear879
+prop168=Clear
+prop259=Clear
 prop260=Color:
 prop43=Computer Science III
-prop29=Course Details0
+prop29=Course Details
 prop33=Course Info
 prop224=Criteria:
-prop199=Date354
+prop199=Date
 prop206=Date:
 prop155=Day/Time:
 prop113=Email
@@ -220,10 +220,10 @@ prop187=Ending Friday:
 prop42=Export Dir:
 prop13=Exportcopy.png
 prop51=Fall
-prop92=Fall0
-prop73=File Name350
-prop246=File Name767
-prop272=First Name0909
+prop92=Fall
+prop73=File Name
+prop246=File Name
+prop272=First Name
 prop279=First Name:
 prop9=Floppycopy.png
 prop11=Floppydowncopy.png
@@ -235,7 +235,7 @@ prop40=Instructor Name:
 prop154=Instructor:
 prop171=Jane Doe
 prop169=Joe Schmo
-prop273=Last Name65
+prop273=Last Name
 prop280=Last Name:
 prop83=Left Footer Image:
 prop223=Link:
@@ -248,7 +248,7 @@ prop107=Name
 prop112=Name:
 prop251=Name:
 prop245=Navbar Title
-prop72=Navbar Title8365
+prop72=Navbar Title
 prop5=Newcopy.png
 prop37=Number:
 prop125=Office Hours
@@ -263,14 +263,14 @@ prop20=Redocopy.png
 prop159=Richard McKenna
 prop45=Richard McKenna
 prop84=Right Footer Image:
-prop275=Role99
+prop275=Role
 prop292=Role:
 prop216=SNOW DAY
 prop285=SNOW DAY
 prop180=Schedule
 prop194=Schedule Items:
-prop247=Script12345
-prop74=Script775
+prop247=Script
+prop74=Script
 prop144=Section
 prop153=Section:
 prop36=Semester:
@@ -284,9 +284,9 @@ prop268=Students
 prop91=Stylesheet:
 prop35=Subject:
 prop174=Supervising TA:
-prop173=Supervising TA:87
-prop147=TA567
-prop148=TA756
+prop173=Supervising TA:
+prop147=TA1
+prop148=TA2
 prop101=Teaching Assistants
 prop274=Team44
 prop291=Team:
@@ -295,17 +295,17 @@ prop68=Template Dir:
 prop262=TextColor:
 prop64=The selected directory should contain the full site template, including the HTML files
 prop208=Time:
-prop200=Title009
+prop200=Title
 prop209=Title:
 prop39=Title:
 prop201=Topic1234567
 prop222=Topic:
-prop198=Type789
+prop198=Type
 prop207=Type:
 prop106=Undergrad
 prop18=Undocopy.png
-prop244=Use000999
-prop71=Use28654
+prop244=Use
+prop71=Use
 prop38=Year:
 prop25=\ Course Details
 prop232=\ Project Data
