about to jsonize all the tableviews

--- a/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
@@ -288,7 +288,7 @@ prop173=Supervising TA:
 prop147=TA1
 prop148=TA2
 prop101=Teaching Assistants
-prop274=Team44
+prop274=Team
 prop291=Team:
 prop240=Teams
 prop68=Template Dir:
