--- a/TAManager_Solution/nbproject/project.properties
+++ b/TAManager_Solution/nbproject/project.properties
@@ -64,6 +64,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 _Experiments_.main.class=tam.TAManagerApp
+main.class=tam.TAManagerApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
