FINISHED THE GUI!!! The last bit was kinda sloppy but really I dont give a fuck anymore...which is really sad...I wanted to make the code decent but I dont have time. oh well.

--- a/RyansAppFramework/src/_Externals_/_Resources_/_Templates_/js/ProjectsData.json
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Templates_/js/ProjectsData.json
@@ -3,7 +3,7 @@
         {
             "semester": "Spring 2016",
             "projects": [
-                { "name": "Atomic Comics",      "students": ["Neal Beeken", "Anthony Musco", "Yuanyuan Peng", "Gustavo Poscidonio"],        "link": "http://atomicomic.com"},
+                { "name": "Atomic Comics",      "students": ["Neal Beeken", "Anthony Musco", "Yuanyuan Peng", "Gustavo Poscidonio"],        "link": "http://ryan="},
                 { "name": "C4 Comics",          "students": ["Alan Thomas", "Yuzhe Hu", "Marc Rejndrup", "Douglas Bell"],                   "link": "https://c4-comics.appspot.com"},
                 { "name": "Comx Central",       "students": ["Ted Saint-Vil", "Christopher Vaneron", "Mike Sayan", "Travis Pierre"],        "link": "https://comxcentral.appspot.com"},
                 { "name": "Comic Granny",       "students": ["Jensen Zhang", "Minghui Lin", "Yiou Chen", "Chengzhen Wu"],                   "link": "http://comic-granny.appspot.com/"},
