--- a/RyansAppFramework/work/ExportTests/js/ProjectsData.json
+++ b/RyansAppFramework/work/ExportTests/js/ProjectsData.json
@@ -1,1 +1,13 @@
-{"work": [{"semester": "North Korea 2099"}]}
+{"work": [{
+    "projects": [{
+        "name": "The Manhattan Project",
+        "link": "https://en.wikipedia.org/wiki/Manhattan_ProjectBIWlp7sHL4O-x56DPCCwBPIw&sig2=_06-qro9MvYPxjfObZhxUg",
+        "students": [
+            "James DeCarlo",
+            "Zach Lerman",
+            "Jose Rodriguez",
+            "Rahul Verma"
+        ]
+    }],
+    "semester": "North Korea 2099"
+}]}
