--- a/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
+++ b/RyansAppFramework/src/_Externals_/_Resources_/_Properties_/english.properties
@@ -869,8 +869,12 @@ navy=Navy
 dry.grey=Dry Grey
 deleting.this.team.will.also.delete.some.students.is.this.ok=Deleting this team will also delete some students. Is this ok?
 error.bad.date.cannot.add.or.update=Error: Bad date; cannot add or update
+autosave_sound=Autosave
+#0.00833333333 HZ == Once every two minutes
+AutoSaveFrequencyInHz=0.00833333333
+whether_to_use_autosave=true
 #endregion
-
+#region Old Config: This had labels on the textfields; good for diagnostics
 #app_title=Ryan Burgert's Course Site Generator
 #app_icon_name=AppIcon.png
 #app_min_height=300
@@ -1743,3 +1747,4 @@ error.bad.date.cannot.add.or.update=Error: Bad date; cannot add or update
 #deleting.this.team.will.also.delete.some.students.is.this.ok=Deleting this team will also delete some students. Is this ok?
 #error.bad.date.cannot.add.or.update=Error: Bad date; cannot add or update
 ##endregion
+#endregion
